testdata/cases/analyze/invalid_url.expected
testdata/cases/analyze/invalid_url.go:6:12: error[invalid-url]: ":" is not a valid URL: parse ":": missing protocol scheme
